erDiagram
    IMAGES ||--|| IMAGE_META : "image_id = id"
    IMAGES ||--|| IMAGES_FTS : "rowid = id (no FK, manual sync)"

    IMAGES {
        INTEGER id PK
        TEXT filename
        TEXT sheet_name
        TEXT cell_ref
        TEXT mime_type
        BLOB full_image
        BLOB thumbnail
        INTEGER width_px
        INTEGER height_px
        TEXT created_at
    }

    IMAGE_META {
        INTEGER image_id PK
        TEXT tags
        TEXT description
    }

    IMAGES_FTS {
        TEXT filename
        TEXT sheet_name
        TEXT cell_ref
        TEXT tags
        TEXT description
    }

    APP_CONFIG {
        TEXT key PK
        TEXT value
    }
